Revert "Fixing the CSS for line spacing issues"

--- a/src/css/default.css
+++ b/src/css/default.css
@@ -1,43 +1,46 @@
 h1, h2, h3, h4, h5, h6 {
-font-family: 'Open Sans', sans-serif;
-color: #272727;
-text-transform: uppercase;
+  font-family: 'Raleway', sans-serif;
+  font-weight: normal;
+  color: #272727;
+  text-transform: uppercase;
 }
 
 h1 {
-margin-top: 3224x;
-margin-bottom: -12px;
-font-size: 32px;
-font-style: normal;
+  font-size: 27px;
+  line-height: 35px;
+  margin-bottom: 40px;
+  font-style: normal;
 }
 
 h2 {
-font-size: 24px;
-color: #333333;
-margin-bottom: -12px
+  font-weight: bold;
+  font-size: 18px;
+  margin-top: 20px;
+  margin-bottom: 5px;
+  color: #333333;
 }
 
 h3 {
-font-size: 18px;
-margin-bottom: -12px
+
+  font-size: 18px;
+  line-height: 25px;
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: bold;
 }
 
 h4 {
-font-size: 16px;
+  font-size: 16px;
+  line-height: 22px;
+  margin-bottom: 18px;
+  font-style: normal;
 }
 
 h5 {
-font-size: 14px;
-}
-
-p {
-font: 14px 'Open Sans', sans-serif;
-font-weight: normal;
-line-height: 1.3;
-}
-
-body {
-color: black;
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 16px;
+  font-style: normal;
 }
 
 .navbar {
@@ -67,8 +70,19 @@ color: black;
     display:none;
 }
 
+body {
+  color: #727272;
+  font-size: 16;
+}
+
 table code{
   word-break: normal;
+}
+
+p {
+  font: 14px 'Open Sans', sans-serif;
+  font-weight: normal;
+  line-height: 23px;
 }
 
 .card-group-mini {
